создание hero and header

--- a/index.html
+++ b/index.html
@@ -5,27 +5,54 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Document</title>
+	<link rel="stylesheet" href="css/header.min.css">
+	<link rel="stylesheet" href="css/hero.min.css">
+	<title>БК "Ясенево" | Главнаяt</title>
 </head>
 
-<body>
-	<header>
-		<div class="logo">
+<div>
+	<div class="container">
+		<div class="header">
+			<div class="header__logo">БК "Ясенево"</div>
+			<nav>
+				<ul class="nav">
+					<li class="nav__item"><a href="/">Главная</a></li>
+					<li class="nav__item"><a href="location.html">Расположение</a></li>
+					<li class="nav__item"><a href="plans.html">Планировки</a></li>
+					<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
+				</ul>
+			</nav>
 		</div>
-		<nav>
-			<ul>
-				<li><a href="#">Главная</a></li>
-				<li><a href="location.html">Расположение</a></li>
-				<li><a href="plans.html">Планировки</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
+		<main>
+			<div class="container">
+				<section class="hero">
+					<h1 class="hero__title">Офисы класса "А" в бизнес-квартале "Ясенево"</h1>
+					<div class="hero__parametrs">
+						<div class="hero__parametrs__item">
+							<span><strong>1 мин</strong></span>
+							<span>пешком от метро</span>
+						</div>
+						<div class="hero__parametrs__item">
+							<span><strong>от 60 м2</strong></span>
+							<span>помещения под офисы</span>
+						</div>
+						<div class="hero__parametrs__item">
+							<span><strong>2024 г.</strong></span>
+							<span>первая очередь</span>
+						</div>
+					</div>
+					<img class="hero__image" src="assets/images/hero/mask-grup.png" alt="Бизнес квартал">
+				</section>
+				<section class="pdf">
 
-	</main>
-	<footer>
+				</section>
+			</div>
+		</main>
 
-	</footer>
-</body>
+		<footer>
+
+		</footer>
+	</div>
+	</body>
 
 </html>
