--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
 </head>
 
 <div>
-	<div class="container">
-		<div class="header">
-			<div class="header__logo">БК "Ясенево"</div>
-			<nav>
-				<ul class="nav">
-					<li class="nav__item"><a href="/">Главная</a></li>
-					<li class="nav__item"><a href="location.html">Расположение</a></li>
-					<li class="nav__item"><a href="plans.html">Планировки</a></li>
-					<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
-				</ul>
-			</nav>
-		</div>
+	<div class="wrapper">
+		<header>
+			<div class="container">
+				<div class="header">
+					<div class="header__logo">БК "Ясенево"</div>
+					<nav>
+						<ul class="nav">
+							<li class="nav__item"><a href="/">Главная</a></li>
+							<li class="nav__item"><a href="location.html">Расположение</a></li>
+							<li class="nav__item"><a href="plans.html">Планировки</a></li>
+							<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
+
 		<main>
 			<div class="container">
 				<section class="hero">
@@ -43,8 +48,22 @@
 					</div>
 					<img class="hero__image" src="assets/images/hero/mask-grup.png" alt="Бизнес квартал">
 				</section>
-				<section class="pdf">
 
+				<section class="inf">
+					<span class="inf__title_affter">О проекте</span>
+					<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
+					<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
+						станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный путь
+						от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
+				</section>
+
+				<section class="pdf">
+					<h2 class="pdf__title">Вся информация о проекте - в презентации</h2>
+					<ul>
+						<li>25 слайдов подробной информации</li>
+						<li>Инфоструктура, благоустройство, располоюение</li>
+						<li>Инженерия, концепция и тд.</li>
+					</ul>
 				</section>
 			</div>
 		</main>
