updating the rubber layout

--- a/location.html
+++ b/location.html
@@ -1,28 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Расположение</title>
+	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/header.min.css">
+	<link rel="stylesheet" href="css/hero.min.css">
+	<link rel="stylesheet" href="css/inf.min.css">
+	<link rel="stylesheet" href="css/map.min.css">
+	<title>БК "Ясенево" | Главнаяt</title>
 </head>
-<body>
-	<header>
-		<div class="logo">
-		</div>
-		<nav>
-			<ul>
-				<li><a href="index.html">Главная</a></li>
-				<li><a href="#">Расположение</a></li>
-				<li><a href="plans.html">Планировки</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
 
-	</main>
-	<footer>
+<div>
+	<div class="wrapper">
+		<header>
+			<div class="container">
+				<div class="header">
+					<div class="header__logo">БК "Ясенево"</div>
+					<nav>
+						<ul class="nav">
+							<li class="nav__item"><a href="index.html">Главная</a></li>
+							<li class="nav__item"><a href="location.html">Расположение</a></li>
+							<li class="nav__item"><a href="plans.html">Планировки</a></li>
+							<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
 
-	</footer>
-</body>
+		<main>
+			<div class="container">
+				<section class="hero">
+					<h1 class="hero__title large">БК “Ясенево” расположен в районе с готовой инфраструктурой</h1>
+					<div class="hero__parametrs">
+						<div class="hero__parametrs__item">
+							<span><strong>1 мин</strong></span>
+							<span>пешком от метро</span>
+						</div>
+					</div>
+					<img class="hero__image" src="assets/images/hero/mask-grup.png" alt="Бизнес квартал">
+					<nav>
+						<ul class="nav hero-nav">
+							<li class="nav__item nav__item_button"><a href="location.html">Расположение</a></li>
+							<li class="nav__item nav__item_button"><a href="plans.html">Планировки</a></li>
+						</ul>
+					</nav>
+				</section>
+
+				<section class="inf">
+					<span class="inf__title_affter">О проекте</span>
+					<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
+					<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
+						станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
+						путь
+						от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
+				</section>
+
+				<section class="pdf">
+					<h2 class="pdf__title">Вся информация о проекте - в презентации</h2>
+					<ul>
+						<li>25 слайдов подробной информации</li>
+						<li>Инфоструктура, благоустройство, располоюение</li>
+						<li>Инженерия, концепция и тд.</li>
+					</ul>
+				</section>
+			</div>
+		</main>
+
+		<footer>
+
+		</footer>
+	</div>
+	</body>
 
 </html>
