--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="stylesheet" href="css/header.min.css">
 	<link rel="stylesheet" href="css/hero.min.css">
+	<link rel="stylesheet" href="css/inf.min.css">
+	<link rel="stylesheet" href="css/map.min.css">
 	<title>БК "Ясенево" | Главнаяt</title>
 </head>
 
@@ -18,7 +20,7 @@
 					<div class="header__logo">БК "Ясенево"</div>
 					<nav>
 						<ul class="nav">
-							<li class="nav__item"><a href="/">Главная</a></li>
+							<li class="nav__item"><a href="index.html">Главная</a></li>
 							<li class="nav__item"><a href="location.html">Расположение</a></li>
 							<li class="nav__item"><a href="plans.html">Планировки</a></li>
 							<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
@@ -32,7 +34,7 @@
 			<div class="container">
 				<section class="hero">
 					<h1 class="hero__title">Офисы класса "А" в бизнес-квартале "Ясенево"</h1>
-					<div class="hero__parametrs">
+					<div class="hero__parametrs_large">
 						<div class="hero__parametrs__item">
 							<span><strong>1 мин</strong></span>
 							<span>пешком от метро</span>
@@ -47,13 +49,20 @@
 						</div>
 					</div>
 					<img class="hero__image" src="assets/images/hero/mask-grup.png" alt="Бизнес квартал">
+					<nav>
+						<ul class="nav hero-nav">
+							<li class="nav__item nav__item_button"><a href="location.html">Расположение</a></li>
+							<li class="nav__item nav__item_button"><a href="plans.html">Планировки</a></li>
+						</ul>
+					</nav>
 				</section>
 
 				<section class="inf">
 					<span class="inf__title_affter">О проекте</span>
 					<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
 					<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
-						станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный путь
+						станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
+						путь
 						от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
 				</section>
 
