Update sections and blocks

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="container">
 				<section class="hero">
 					<h1 class="hero__title">Офисы класса "А" в бизнес-квартале "Ясенево"</h1>
-					<div class="hero__parametrs_large">
+					<div class="hero__parametrs hero__parametrs_large">
 						<div class="hero__parametrs__item">
 							<span><strong>1 мин</strong></span>
 							<span>пешком от метро</span>
@@ -58,14 +58,68 @@
 				</section>
 
 				<section class="inf">
-					<span class="inf__title_affter">О проекте</span>
-					<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
-					<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
-						станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
-						путь
-						от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
+					<div class="inf-content">
+						<span class="inf__title_affter">О проекте</span>
+						<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
+						<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
+							станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
+							путь
+							от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
+					</div>
+					<div class="container-circle">
+						<div class="infoadd__circle">
+							<div class="infoadd__circle_item-left">
+								<div class="infoadd__circle_item">
+									<div class="image">
+										<img src="assets/images/inf/item-1.png" alt="Очистители воздуха">
+									</div>
+									<span>Повышенный класс очистки воздуха</span>
+								</div>
+								<div class="infoadd__circle_item">
+									<div class="image">
+										<img src="assets/images/inf/item-2.png" alt="Окна ">
+									</div>
+									<span>Открывающиеся окна с дистанционным управлением</span>
+								</div>
+								<div class="infoadd__circle_item">
+									<div class="image">
+										<img src="assets/images/inf/item-3.png" alt="Увлажнитель воздуха">
+									</div>
+									<span>Паровое увлажнение воздуха</span>
+								</div>
+							</div>
+							<div class="infoadd__circle_item-right">
+								<div class="infoadd__circle_item">
+									<div class="image">
+										<img src="assets/images/inf/item-4.png" alt="Отделка офиса">
+									</div>
+									<span>Возможна отделка офиса на выбор</span>
+								</div>
+								<div class="infoadd__circle_item">
+									<div class="image">
+										<img src="assets/images/inf/item-5.png" alt="Офисная кухня">
+									</div>
+									<span>Офисная кухня в каждом лоте</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="block__right-text">
+						<p class="right-text">Vita-офисы в бизнес-квартале – новые эффективные рабочие пространства на основе идеи
+							витальности (жизненной
+							силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и
+							работоспособность сотрудников, развитие бизнеса. Это единая цифровая среда, инфраструктура для резидентов
+							и
+							уникальные шеринг-помещения: комната для тимбилдинга, лекторий, кабинет врача, йога-класс и многое другое.
+						</p>
+						<div class="right-button">
+							<a href="">Узнать больше</a>
+						</div>
+					</div>
 				</section>
 
+				<section class="map">
+				</section>
 				<section class="pdf">
 					<h2 class="pdf__title">Вся информация о проекте - в презентации</h2>
 					<ul>
