--- a/location.html
+++ b/location.html
@@ -33,7 +33,7 @@
 		<main>
 			<div class="container">
 				<section class="hero">
-					<h1 class="hero__title large">БК “Ясенево” расположен в районе с готовой инфраструктурой</h1>
+					<h1 class="hero__title hero__title_smaller">БК “Ясенево” расположен в районе с готовой инфраструктурой</h1>
 					<div class="hero__parametrs">
 						<div class="hero__parametrs__item">
 							<span><strong>1 мин</strong></span>
@@ -41,12 +41,6 @@
 						</div>
 					</div>
 					<img class="hero__image" src="assets/images/hero/mask-grup.png" alt="Бизнес квартал">
-					<nav>
-						<ul class="nav hero-nav">
-							<li class="nav__item nav__item_button"><a href="location.html">Расположение</a></li>
-							<li class="nav__item nav__item_button"><a href="plans.html">Планировки</a></li>
-						</ul>
-					</nav>
 				</section>
 
 				<section class="inf">
