--- a/index.html
+++ b/index.html
@@ -1,140 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+< lang="en">
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="stylesheet" href="css/header.min.css">
-	<link rel="stylesheet" href="css/hero.min.css">
-	<link rel="stylesheet" href="css/inf.min.css">
-	<link rel="stylesheet" href="css/map.min.css">
-	<title>БК "Ясенево" | Главнаяt</title>
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/style.min.css">
+		<link rel="stylesheet" href="css/header.min.css">
+		<link rel="stylesheet" href="css/hero.min.css">
+		<link rel="stylesheet" href="css/inf.min.css">
+		<link rel="stylesheet" href="css/map.min.css">
+		<link rel="stylesheet" href="css/infostr.min.css">
+		<title>БК "Ясенево" | Главнаяt</title>
+	</head>
 
-<div>
-	<div class="wrapper">
-		<header>
-			<div class="container">
-				<div class="header">
-					<div class="header__logo">БК "Ясенево"</div>
-					<nav>
-						<ul class="nav">
-							<li class="nav__item"><a href="index.html">Главная</a></li>
-							<li class="nav__item"><a href="location.html">Расположение</a></li>
-							<li class="nav__item"><a href="plans.html">Планировки</a></li>
-							<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
-						</ul>
-					</nav>
+	<div>
+		<div class="wrapper">
+			<header>
+				<div class="container">
+					<div class="header">
+						<div class="header__logo">БК "Ясенево"</div>
+						<nav>
+							<ul class="nav">
+								<li class="nav__item"><a href="index.html">Главная</a></li>
+								<li class="nav__item"><a href="location.html">Расположение</a></li>
+								<li class="nav__item"><a href="plans.html">Планировки</a></li>
+								<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
+							</ul>
+						</nav>
+					</div>
 				</div>
-			</div>
-		</header>
+			</header>
 
-		<main>
-			<div class="container">
-				<section class="hero">
-					<h1 class="hero__title">Офисы класса "А" в бизнес-квартале "Ясенево"</h1>
-					<div class="hero__parametrs hero__parametrs_large">
-						<div class="hero__parametrs__item">
-							<span><strong>1 мин</strong></span>
-							<span>пешком от метро</span>
+			<main>
+				<div class="container">
+					<section class="hero">
+						<h1 class="hero__title">Офисы класса "А" в бизнес-квартале "Ясенево"</h1>
+						<div class="hero__parametrs hero__parametrs_large">
+							<div class="hero__parametrs__item">
+								<span><strong>1 мин</strong></span>
+								<span>пешком от метро</span>
+							</div>
+							<div class="hero__parametrs__item">
+								<span><strong>от 60 м2</strong></span>
+								<span>помещения под офисы</span>
+							</div>
+							<div class="hero__parametrs__item">
+								<span><strong>2024 г.</strong></span>
+								<span>первая очередь</span>
+							</div>
 						</div>
-						<div class="hero__parametrs__item">
-							<span><strong>от 60 м2</strong></span>
-							<span>помещения под офисы</span>
+						<img class="hero__image" src="assets/images/hero/mask-grup.png" alt="Бизнес квартал">
+						<nav>
+							<ul class="nav hero-nav">
+								<li class="nav__item nav__item_button"><a href="location.html">Расположение</a></li>
+								<li class="nav__item nav__item_button"><a href="plans.html">Планировки</a></li>
+							</ul>
+						</nav>
+					</section>
+
+					<section class="inf">
+						<div class="inf-content">
+							<span class="inf__title_affter">О проекте</span>
+							<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
+							<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
+								станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
+								путь
+								от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
 						</div>
-						<div class="hero__parametrs__item">
-							<span><strong>2024 г.</strong></span>
-							<span>первая очередь</span>
+						<div class="container-circle">
+							<div class="infoadd__circle">
+								<div class="infoadd__circle_item-left">
+									<div class="infoadd__circle_item">
+										<div class="image">
+											<img src="assets/images/inf/item-1.png" alt="Очистители воздуха">
+										</div>
+										<span>Повышенный класс очистки воздуха</span>
+									</div>
+									<div class="infoadd__circle_item">
+										<div class="image">
+											<img src="assets/images/inf/item-2.png" alt="Окна ">
+										</div>
+										<span>Открывающиеся окна с дистанционным управлением</span>
+									</div>
+									<div class="infoadd__circle_item">
+										<div class="image">
+											<img src="assets/images/inf/item-3.png" alt="Увлажнитель воздуха">
+										</div>
+										<span>Паровое увлажнение воздуха</span>
+									</div>
+								</div>
+								<div class="infoadd__circle_item-right">
+									<div class="infoadd__circle_item">
+										<div class="image">
+											<img src="assets/images/inf/item-4.png" alt="Отделка офиса">
+										</div>
+										<span>Возможна отделка офиса на выбор</span>
+									</div>
+									<div class="infoadd__circle_item">
+										<div class="image">
+											<img src="assets/images/inf/item-5.png" alt="Офисная кухня">
+										</div>
+										<span>Офисная кухня в каждом лоте</span>
+									</div>
+								</div>
+							</div>
 						</div>
-					</div>
-					<img class="hero__image" src="assets/images/hero/mask-grup.png" alt="Бизнес квартал">
-					<nav>
-						<ul class="nav hero-nav">
-							<li class="nav__item nav__item_button"><a href="location.html">Расположение</a></li>
-							<li class="nav__item nav__item_button"><a href="plans.html">Планировки</a></li>
+						<div class="block__right-text">
+							<p class="right-text">Vita-офисы в бизнес-квартале – новые эффективные рабочие пространства на основе идеи
+								витальности (жизненной
+								силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и
+								работоспособность сотрудников, развитие бизнеса. Это единая цифровая среда, инфраструктура для
+								резидентов
+								и
+								уникальные шеринг-помещения: комната для тимбилдинга, лекторий, кабинет врача, йога-класс и многое
+								другое.
+							</p>
+							<div class="right-button">
+								<a href="">Узнать больше</a>
+							</div>
+						</div>
+					</section>
+
+					<section class="map">
+					</section>
+
+					<section class="infostr">
+						<div class="infostr-content">
+							<span class="infostr__title_affter">Инфоструктура</span>
+							<h2>Район с готовой инфраструктурой</h2>
+						</div>
+						<div class="infostr__grid">
+							<div class="item_1">
+								<span>Торгово-офисный центр с крытым переходом из метро</span>
+							</div>
+							<div class="item_2">
+								<span>Уникальные пространства для резидентов бизнес центра</span>
+							</div>
+							<div class="item_3">
+								<span>«Уличная гостиная» с удобной мебелью</span>
+							</div>
+							<div class="item_4">
+								<span>Подземная и наземная парковка с электро-зарядками</span>
+							</div>
+							<div class="item_5">
+								<span>Благоустройство более 7Га с выходом к набережной</span>
+							</div>
+							<div class="item_5">
+								<span>Магазины, панорамный ресторан, шоу-румы, эвенты</span>
+							</div>
+						</div>
+					</section>
+
+					<section class="pdf">
+						<h2 class="pdf__title">Вся информация о проекте - в презентации</h2>
+						<ul>
+							<li>25 слайдов подробной информации</li>
+							<li>Инфоструктура, благоустройство, располоюение</li>
+							<li>Инженерия, концепция и тд.</li>
 						</ul>
-					</nav>
-				</section>
+					</section>
+				</div>
+			</main>
 
-				<section class="inf">
-					<div class="inf-content">
-						<span class="inf__title_affter">О проекте</span>
-						<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
-						<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
-							станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
-							путь
-							от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
-					</div>
-					<div class="container-circle">
-						<div class="infoadd__circle">
-							<div class="infoadd__circle_item-left">
-								<div class="infoadd__circle_item">
-									<div class="image">
-										<img src="assets/images/inf/item-1.png" alt="Очистители воздуха">
-									</div>
-									<span>Повышенный класс очистки воздуха</span>
-								</div>
-								<div class="infoadd__circle_item">
-									<div class="image">
-										<img src="assets/images/inf/item-2.png" alt="Окна ">
-									</div>
-									<span>Открывающиеся окна с дистанционным управлением</span>
-								</div>
-								<div class="infoadd__circle_item">
-									<div class="image">
-										<img src="assets/images/inf/item-3.png" alt="Увлажнитель воздуха">
-									</div>
-									<span>Паровое увлажнение воздуха</span>
-								</div>
-							</div>
-							<div class="infoadd__circle_item-right">
-								<div class="infoadd__circle_item">
-									<div class="image">
-										<img src="assets/images/inf/item-4.png" alt="Отделка офиса">
-									</div>
-									<span>Возможна отделка офиса на выбор</span>
-								</div>
-								<div class="infoadd__circle_item">
-									<div class="image">
-										<img src="assets/images/inf/item-5.png" alt="Офисная кухня">
-									</div>
-									<span>Офисная кухня в каждом лоте</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="block__right-text">
-						<p class="right-text">Vita-офисы в бизнес-квартале – новые эффективные рабочие пространства на основе идеи
-							витальности (жизненной
-							силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и
-							работоспособность сотрудников, развитие бизнеса. Это единая цифровая среда, инфраструктура для резидентов
-							и
-							уникальные шеринг-помещения: комната для тимбилдинга, лекторий, кабинет врача, йога-класс и многое другое.
-						</p>
-						<div class="right-button">
-							<a href="">Узнать больше</a>
-						</div>
-					</div>
-				</section>
+			<footer>
 
-				<section class="map">
-				</section>
-				<section class="pdf">
-					<h2 class="pdf__title">Вся информация о проекте - в презентации</h2>
-					<ul>
-						<li>25 слайдов подробной информации</li>
-						<li>Инфоструктура, благоустройство, располоюение</li>
-						<li>Инженерия, концепция и тд.</li>
-					</ul>
-				</section>
-			</div>
-		</main>
+			</footer>
+		</div>
+		</body>
 
-		<footer>
-
-		</footer>
-	</div>
-	</body>
-
-</html>
+		</html>
