--- a/location.html
+++ b/location.html
@@ -1,72 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<lang="ru">
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="stylesheet" href="css/header.min.css">
-	<link rel="stylesheet" href="css/hero.min.css">
-	<link rel="stylesheet" href="css/inf.min.css">
-	<link rel="stylesheet" href="css/map.min.css">
-	<title>БК "Ясенево" | Главнаяt</title>
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/style.min.css">
+		<link rel="stylesheet" href="css/header.min.css">
+		<link rel="stylesheet" href="css/hero.min.css">
+		<link rel="stylesheet" href="css/inf.min.css">
+		<link rel="stylesheet" href="css/map.min.css">
+		<link rel="stylesheet" href="css/infostr.min.css">
+		<link rel="stylesheet" href="css/pdf.min.css">
+		<link rel="stylesheet" href="css/footer.min.css">
+		<title>БК "Ясенево" | Расположение</title>
+	</head>
 
-<div>
-	<div class="wrapper">
-		<header>
-			<div class="container">
-				<div class="header">
-					<div class="header__logo">БК "Ясенево"</div>
-					<nav>
-						<ul class="nav">
-							<li class="nav__item"><a href="index.html">Главная</a></li>
-							<li class="nav__item"><a href="location.html">Расположение</a></li>
-							<li class="nav__item"><a href="plans.html">Планировки</a></li>
-							<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
-
-		<main>
-			<div class="container">
-				<section class="hero">
-					<h1 class="hero__title hero__title_smaller">БК “Ясенево” расположен в районе с готовой инфраструктурой</h1>
-					<div class="hero__parametrs">
-						<div class="hero__parametrs__item">
-							<span><strong>1 мин</strong></span>
-							<span>пешком от метро</span>
-						</div>
+	<div>
+		<div class="wrapper">
+			<header>
+				<div class="container">
+					<div class="header">
+						<div class="header__logo">БК "Ясенево"</div>
+						<nav>
+							<ul class="nav">
+								<li class="nav__item"><a href="index.html">Главная</a></li>
+								<li class="nav__item"><a href="location.html">Расположение</a></li>
+								<li class="nav__item"><a href="plans.html">Планировки</a></li>
+								<li class="nav__item nav__item_button"> <a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
+							</ul>
+						</nav>
 					</div>
-					<img class="hero__image" src="assets/images/hero/mask-grup.png" alt="Бизнес квартал">
-				</section>
+				</div>
+			</header>
 
-				<section class="inf">
-					<span class="inf__title_affter">О проекте</span>
-					<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
-					<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
-						станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
-						путь
-						от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
-				</section>
+			<main>
+				<div class="container">
+					<section class="hero">
+						<h1 class="hero__title smaller">
+							БК “Ясенево” расположен в районе с готовой инфраструктурой</h1>
+						<div class="hero__parametrs hero__parametrs">
+							<div class="hero__parametrs__item">
+								<span><strong>от 60 м2</strong></span>
+								<span>помещения под офисы</span>
+							</div>
+						</div>
+						<img class="hero__image" src="assets/images/hero/hero-2.png" alt="Бизнес квартал">
+						<nav>
+							<ul class="nav hero-nav">
+								<li class="nav__item nav__item_button"><a href="location.html">Расположение</a></li>
+								<li class="nav__item nav__item_button"><a href="plans.html">Планировки</a></li>
+							</ul>
+						</nav>
+					</section>
 
-				<section class="pdf">
-					<h2 class="pdf__title">Вся информация о проекте - в презентации</h2>
-					<ul>
-						<li>25 слайдов подробной информации</li>
-						<li>Инфоструктура, благоустройство, располоюение</li>
-						<li>Инженерия, концепция и тд.</li>
-					</ul>
-				</section>
-			</div>
-		</main>
+					<section class="inf">
+						<div class="inf-content">
+							<span class="inf__title_affter">Расположение </span>
+							<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
+								станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
+								путь от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
+						</div>
+						<img src="assets/images/inf/map.png" alt="Map">
+					</section>
 
-		<footer>
+					<section class="map">
+					</section>
 
-		</footer>
-	</div>
-	</body>
+					<section class="infostr">
+						<div class="infostr__content">
+							<span class="infostr__title">Инфоструктура</span>
+							<h2>Район с готовой инфраструктурой</h2>
+						</div>
+						<div class="infostr__grid">
+							<div class="item_1">
+								<span>Торгово-офисный центр с крытым переходом из метро</span>
+							</div>
+							<div class="item_2">
+								<span>Уникальные пространства для резидентов бизнес центра</span>
+							</div>
+							<div class="item_3">
+								<span>«Уличная гостиная» с удобной мебелью</span>
+							</div>
+							<div class="item_4">
+								<span>Подземная и наземная парковка с электро-зарядками</span>
+							</div>
+							<div class="item_5">
+								<span>Благоустройство более 7Га с выходом к набережной</span>
+							</div>
+							<div class="item_5">
+								<span>Магазины, панорамный ресторан, шоу-румы, эвенты</span>
+							</div>
+						</div>
+					</section>
 
-</html>
+					<section class="pdf">
+						<span class="pdf__title">Подробно</span>
+						<h2>Вся информация о проекте - <br> в презентации</h2>
+						<ul>
+							<li>25 слайдов подробной информации</li>
+							<li>Инфоструктура, благоустройство, располоюение</li>
+							<li>Инженерия, концепция и тд.</li>
+						</ul>
+						<a type="" class="button-pdf" href="">Скачать презентацию</a>
+					</section>
+				</div>
+			</main>
+
+			<footer>
+				<div class="container">
+					<div class="footer__content">
+						<span>Подберем лучшее помещение <br> под ваши задачи, основываясь <br> на аналитике бизнес-среды <br> в
+							локации.
+						</span>
+						<form>
+							<label for="name"></label>
+							<input type="text" id="name" name="name" required placeholder="Ваше имя">
+							<label for="phone"></label>
+							<input type="tel" id="phone" name="phone" required placeholder="+7 987 654 32 10">
+							<button type="submit" value="Отправить">Получить консультацию</button>
+						</form>
+					</div>
+					<div class="footer__link">
+						<h2>БК “Ясенево”</h2>
+						<span>+7 (495) 221-40-22</span>
+					</div>
+				</div>
+			</footer>
+		</div>
+		</body>
+
+		</html>
