--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/infostr.min.css">
 		<link rel="stylesheet" href="css/pdf.min.css">
 		<link rel="stylesheet" href="css/footer.min.css">
-		<title>БК "Ясенево" | Главнаяt</title>
+		<title>БК "Ясенево" | Главная</title>
 	</head>
 
 	<div>
