--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
 							</div>
 						</div>
 						<div class="block__right-text">
-							<p class="right-text">Vita-офисы в бизнес-квартале – новые эффективные рабочие пространства на основе идеи
+							<p class="right-text" style="margin-top: 100px;">Vita-офисы в бизнес-квартале – новые эффективные рабочие
+								пространства на основе идеи
 								витальности (жизненной
 								силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и
 								работоспособность сотрудников, развитие бизнеса. Это единая цифровая среда, инфраструктура для
@@ -124,6 +125,7 @@
 					</section>
 
 					<section class="map">
+						<img src="assets/images/map/image-people-lenta.png" alt="">
 					</section>
 
 					<section class="infostr">
