--- a/plans.html
+++ b/plans.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/infostr.min.css">
 		<link rel="stylesheet" href="css/pdf.min.css">
 		<link rel="stylesheet" href="css/footer.min.css">
+		<link rel="stylesheet" href="css/plans.min.css">
 		<title>БК "Ясенево" | Планировка</title>
 	</head>
 
@@ -69,9 +70,27 @@
 							</div>
 					</section>
 
-					<section class="map">
+					<section class="plans">
+						<div class="plans__list">
+							<span class="plans__title">Планировки</span>
+							<div class="plans__list_page">
+							</div>
+							<div class="page_item">
+							</div>
+							<div class="page_item">
+							</div>
+							<div class="page_item">
+							</div>
+							<div class="page_item">
+							</div>
+							<div class="page_item">
+							</div>
+						</div>
 					</section>
-					<img src="assets/images/map/image-people-lenta.png" alt="People ">
+
+					<section class="map">
+						<img src="assets/images/map/image-people-lenta.png" alt="People ">
+					</section>
 
 					<section class="pdf">
 						<span class="pdf__title">Подробно</span>
