--- a/location.html
+++ b/location.html
@@ -55,7 +55,7 @@
 
 					<section class="inf">
 						<div class="inf-content">
-							<span class="inf__title_affter">Расположение </span>
+							<span class="inf__title-affter">Расположение </span>
 							<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
 								станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
 								путь от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
