--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<link rel="stylesheet" href="css/style.min.css">
 		<link rel="stylesheet" href="css/header.min.css">
 		<link rel="stylesheet" href="css/hero.min.css">
-		<link rel="stylesheet" href="css/inf.min.css">
 		<link rel="stylesheet" href="css/map.min.css">
 		<link rel="stylesheet" href="css/infostr.min.css">
 		<link rel="stylesheet" href="css/pdf.min.css">
 		<link rel="stylesheet" href="css/footer.min.css">
+		<link rel="stylesheet" href="css/inf.min.css">
 		<title>БК "Ясенево" | Главная</title>
 	</head>
 
@@ -62,7 +62,7 @@
 
 					<section class="inf">
 						<div class="inf-content">
-							<span class="inf__title_affter">О проекте</span>
+							<span class="inf__title-affter">О проекте</span>
 							<h2>Уникальный проект в динамично развивающемся районе Москвы</h2>
 							<p>Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
 								станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный
@@ -108,7 +108,8 @@
 							</div>
 						</div>
 						<div class="block__right-text">
-							<p class="right-text" style="margin-top: 100px;">Vita-офисы в бизнес-квартале – новые эффективные рабочие
+							<p class="right-text" style="margin-top: 100px;">
+								Vita-офисы в бизнес-квартале – новые эффективные рабочие
 								пространства на основе идеи
 								витальности (жизненной
 								силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и
