--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 							<button type="submit" value="Отправить">Получить консультацию</button>
 						</form>
 					</div>
-					<div class="footer__link">
+					<div class="footer-link">
 						<h2>БК “Ясенево”</h2>
 						<span>+7 (495) 221-40-22</span>
 					</div>
